Bug 12542 - Sata controller unrecognised on a Packard Bell Imedia 8783
Summary: Sata controller unrecognised on a Packard Bell Imedia 8783
Status: CLOSED CODE_FIX
Alias: None
Product: IO/Storage
Classification: Unclassified
Component: Serial ATA (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Tejun Heo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-26 07:22 UTC by Nicolas Derive
Modified: 2012-05-30 11:58 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.28
Subsystem:
Regression: No
Bisected commit-id:


Attachments
lspci -vv (23.57 KB, text/plain)
2009-02-01 11:16 UTC, Nicolas Derive
Details
Here is the result of lspci --nnvv, launched as root (24.15 KB, text/plain)
2009-02-11 09:29 UTC, Nicolas Derive
Details
lspci -nnvv as standard user (13.62 KB, text/plain)
2009-02-11 09:30 UTC, Nicolas Derive
Details
ht-msi-quirk-on-resume.patch (663 bytes, patch)
2009-05-08 23:34 UTC, Tejun Heo
Details | Diff

Description Nicolas Derive 2009-01-26 07:22:00 UTC
Latest working kernel version: Any known.
Earliest failing kernel version: 2.6.27-11-generic
Distribution: Ubuntu
Hardware Environment:
I've an Imedia 8783, with a athlon 64 x2 4400+, a Canberra motherboard from them :

Name : Canberra
Type : Micro ATX motherboard
Made by : ECS
(09-04-2008)

CPU Support

    * Socket AM2+/AM2 (AMD 940-pin)
    * Support socket AM2+/AM2 for AMD Phenom, Athlon 64 X2, Athlon 64, and Sempron processors
    * Support HyperTransport 3.0 with backward compatibility to HyperTransport 1.0

Chipset

    * NVIDIA GeForce 8200 mGPU (MCP78)

System Memory

    * 4x 240-pin DDR2 SDRAM DIMM slots
    * Support Dual channel configuration for better performance
    * Support for single-sided or double-sided DIMMs (DDR2 533/DDR2 677/DDR2 800/DDR2 1066)
    * Support for up to 8 GB system memory
    * Around 700 MB upper memory is shared with the system when 4 GB RAM is installed

Video

    * Maximum video memory in BIOS is 256 MB shared
    * Total maximum video memory 1407 MB using HyperMemory

Audio

    * Realtek ALC 888 audio codec
    * High Definition Audio subsystem
    * 7.1 channel support

Network

    * Realtek RTL8101E
    * 10/100 Mbit

Expansion Slots

    * 1x PCI Express 16X
    * 1x PCI Express 1X
    * 2x PCI

Drive Support

    * 4x SATA II

Software Environment:
Problem Description: Can't boot using a live cd, can boot using a bootable usb key, but no sata peripheral recognised, like the hard drive, the dvd drive (unlike usb ones which are)...

Steps to reproduce: just try to boot...

Already reported at Launchpad : https://bugs.edge.launchpad.net/ubuntu/+source/linux-meta/+bug/304505, please read here for more details and especially output files like dmesg, kernel.log...
Comment 1 Tejun Heo 2009-01-26 17:30:48 UTC
Does "pci=nomsi" make any difference?
Comment 2 Nicolas Derive 2009-02-01 08:03:50 UTC
No, it doesn't make any difference... :/
Comment 3 Nicolas Derive 2009-02-01 11:15:05 UTC
Sorry, I spoke a little bit too fast... It works !!!

But should I keep this option for ever or what ? And where was the problem ?

Thanks for your help !!
Comment 4 Nicolas Derive 2009-02-01 11:16:38 UTC
Created attachment 20066 [details]
lspci -vv

output of lspci -vv, if you need it
Comment 5 Tejun Heo 2009-02-04 01:44:18 UTC
Can you please do "lspci -nnvv"?
Comment 6 Nicolas Derive 2009-02-11 09:29:40 UTC
Created attachment 20199 [details]
Here is the result of lspci --nnvv, launched as root

Here is the result of lspci -nnvv, launched as root. Sorry for the late reply, I just went now back on the computer. the result of the same command as standard user follow.
Comment 7 Nicolas Derive 2009-02-11 09:30:12 UTC
Created attachment 20200 [details]
lspci -nnvv as standard user
Comment 8 Tejun Heo 2009-02-11 17:39:35 UTC
Peer Chen, ahci is failing on mcp78s due to broken MSI.  Can you please tell me whether MSI should be disabled on the whole system or disabling it on ahci is enough?  ie. Is MSI broken in the bridges or is it the ahci controller itself?

Thanks.
Comment 9 TJ 2009-03-02 12:58:28 UTC
I've got a user on Ubuntu, using both the Jaunty alpha 2.6.28- and our packaged vanilla mainline 2.6.29- kernel, that is suffering 'lost disk on resume' syndrome with the Nvidia MCP78S [10de:0ad0] unless the "pci=nomsi" work-around is specified.

We have some comprehensive logs and the user is keen to help in resolving the issue properly.

https://launchpad.net/bugs/334644
Comment 10 Tejun Heo 2009-03-02 16:24:41 UTC
Hey, tj, I'm a tj too.  Nice to meet you.  :-)

I'll ping pchen via email one more time and then just blacklist the whole system.  Hmm... if anyone is willing to, this can be verified by putting in a MSI capable device and see whether it works without pci=nomsi.  e1000e is a good test card for this purpose.

Thanks.
Comment 11 Peer Chen 2009-03-02 18:50:08 UTC
we have a patch for MCP78 MSI issue and kernel 2.6.28 had include it.
https://lists.ubuntu.com/archives/kernel-team/2008-February/002449.html

The patch code is in drivers/pci/quirks.c and looks like kernel resume code doesn't invoke the patch routine in quirks.c.
Comment 12 Tejun Heo 2009-03-02 19:07:35 UTC
Thanks for the pointer Peer Chen.  Nicolas, Tj, can you guys please try the patch?  Adding call to it during resume path can be easily done adding another fixup declaration, so no worries there.
Comment 13 Nicolas Derive 2009-03-21 08:12:03 UTC
Is the patch included by default ? I tried to delete the "pci-nomsi" option at booting one time using 2.6.28-11.36 kernel in Jaunty (devel version), and got the same problem that I had, and fell down to a busybox.
Comment 14 Nicolas Derive 2009-03-21 08:12:45 UTC
I was meaning the "pci=nomsi" option of course...

Sorry for the mistake.
Comment 15 TJ 2009-03-21 17:30:42 UTC
The patch referred to by Peer Chen looks to have got lost in the noise. That may be because it appeared as a 'reply' to another email.

Is there an upstream commit we can cherry-pick? If not, I'll propose the patch for inclusion as a temporary fix until upstream receives it.
Comment 16 Tejun Heo 2009-03-22 19:29:52 UTC
The upstream commit is 9dc625e72309e1c919ea3e7f51d0ffca96123787.  Is someone interested in testing suspend/resume and whether RESUME is necessary there too?
Comment 17 TJ 2009-03-22 22:23:44 UTC
OK, found it now. That commit is in the Ubuntu kernels since v2.6.25-rc3 (Intrepid 8.10 and Jaunty 9.04).

So the concern is that it isn't being invoked on resume?
Comment 18 Peer Chen 2009-05-06 02:58:04 UTC
Any kernel patch to add the call to quirks code in resume path?
Comment 19 Tejun Heo 2009-05-08 23:34:22 UTC
Created attachment 21284 [details]
ht-msi-quirk-on-resume.patch

Sorry about the delay.  Patch attached.
Comment 20 Peer Chen 2009-06-30 02:53:19 UTC
Tejun,
Thanks, the patch works, could you help to submit it?
Comment 21 Tejun Heo 2009-07-08 05:11:01 UTC
Patch submitted.  Thanks.

  http://lkml.org/lkml/2009/7/8/32
Comment 22 TJ 2009-07-09 10:12:03 UTC
Thanks for that Tejun. I'll try to get it pulled into the existing Ubuntu releases as well as the forthcoming Karmic release.

Note You need to log in before you can comment on or make changes to this bug.